[package]
name = "aeronautica"
version = "0.1.0"
edition = "2024"

[dependencies]
aeronet_replicon = { version = "0.20.0", features = ["server"] }
bevy = { version = "0.18.0", features = [
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
bevy_malek_async = { git = "https://github.com/MalekiRe/bevy_malek_async", branch = "backport-for-sheepman" }
bevy_replicon = { version = "0.39.5", default-features = false, features = [
    "server",
    "scene",
] }
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-smol", "uuid"] }
uuid = { version = "1.23.3", features = ["v7"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "forbid"

type_complexity = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
