[workspace]
resolver = "3"
members = ["crates/server", "crates/client", "crates/shared"]
default-members = ["crates/server", "crates/client"]

[workspace.dependencies]
bevy = { version = "0.18.1", features = [
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
bevy_malek_async = { git = "https://github.com/MalekiRe/bevy_malek_async", branch = "backport-for-sheepman" }
bevy_replicon = { version = "0.40.3", default-features = false, features = [
    "scene",
] }
bevy_replicon_renet2 = { version = "0.17.0", features = [
    "netcode",
    "steam",
], default-features = false }
bevy_renet2 = { version = "0.15.0", default-features = false, features = [
    "steam",
] }
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-smol"] }
steamworks = "0.13.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
shared = { path = "crates/shared" }

[patch.crates-io]
renet2 = { git = "https://github.com/PizzaLvr49/renet2", branch = "dev" }
renet2_steam = { git = "https://github.com/PizzaLvr49/renet2", branch = "dev" }
bevy_renet2 = { git = "https://github.com/PizzaLvr49/renet2", branch = "dev" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "forbid"

type_complexity = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
