[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["3d"] }
bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet2 = { workspace = true, features = [
    "native_transport",
    "client",
] }

shared = { path = "../shared" }
steamworks = { workspace = true }

[lints]
workspace = true
