[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = [
    "3d_bevy_render",
    "default_app",
    "picking",
    "scene",
    "ui_api",
    "ui_bevy_render",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "wayland",
    "x11",
] }
bevy_renet2 = { workspace = true }
bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet2 = { workspace = true, features = ["client"] }
bevy_seedling = { workspace = true }

shared = { path = "../shared" }

[lints]
workspace = true
