[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]

bevy = { workspace = true }
bevy_malek_async = { workspace = true }
bevy_renet2 = { workspace = true }
bevy_replicon = { workspace = true, features = ["server"] }
bevy_replicon_renet2 = { workspace = true, features = ["server"] }
clap = { workspace = true }

dotenvy = { workspace = true }

shared = { workspace = true }
sqlx = { workspace = true }
